kubernetes/apps/chaos-api/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: chaos-api-deny-all
  namespace: chaos-api
spec:
  endpointSelector:
    matchLabels:
      app: chaos-api
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  # bloqueio Envoy
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
